--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./styles/main.scss">
+    <title>Ebac Tech Talks</title>
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="./styles/main.scss">
 </head>
 <body>
+<header class="hero">
+<div class="container">
+    <img class="hero__logo" src="./images/ebac_logo.svg" alt="Ebac">
+    <p class="hero__text"> O maior evento de Tecnologi do Brasil começa em 10d 20h 34min 47s</p>
+</div>
+</header>
+
     <script src="./scripts/main.js"></script>
 </body>
 </html>
