--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ebac Tech Talks</title>
@@ -9,15 +10,71 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="./styles/main.scss">
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
 <header class="hero">
 <div class="container">
     <img class="hero__logo" src="./images/ebac_logo.svg" alt="Ebac">
-    <p class="hero__text"> O maior evento de Tecnologi do Brasil começa em 10d 20h 34min 47s</p>
+    <p class="hero__text"> O maior evento de Tecnologia do Brasil começa em <span id="contador"></span></p>
+    <div class="infos-bar">
+        <ul class="infos-bar__infos">
+            <li class="infos-bar__infos__item">
+                <b>Localização</b>
+                Allianz Parque - Barra Funda - São Paulo
+            </li>
+            <li class="infos-bar__infos__item">
+                <b>Preço</b>
+                A partir de R$ 120,00
+            </li>
+            <li class="infos-bar__infos__item">
+                <b>Quando</b>
+                12/12/2022 às 19hrs
+            </li>
+        </ul>
+        <a class="button button--primary" href="#">Garanta sua vaga</a>
+    </div>
+    
 </div>
 </header>
+<section class="event event--frontend" >
+    <div class="container" data-aos="fade-right">
+        <div class="event__details">
+            <h2 class="event__details__title">Front-end</h2>
+            <p class="event__details__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium aspernatur modi commodi maiores iure ut consequatur minima labore repudiandae consectetur hic adipisci quo expedita eaque nam atque officiis, vitae sit!</p>
+        </div>
+        <img class="event__image" src="./images/frontend.png" alt="">
+    </div>
+</section>
+<section class="event event--ui-ux event--image-left">
+    <div class="container" data-aos="fade-left">
+        <div class="event__details">
+            <h2 class="event__details__title">Ui/Ux</h2>
+            <p class="event__details__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium aspernatur modi commodi maiores iure ut consequatur minima labore repudiandae consectetur hic adipisci quo expedita eaque nam atque officiis, vitae sit!</p>
+        </div>
+        <img class="event__image" src="./images/frontend.png" alt="">
+    </div>
+</section>
+<section class="event event--data-science">
+    <div class="container" data-aos="fade-right">
+        <div class="event__details">
+            <h2 class="event__details__title">Data science</h2>
+            <p class="event__details__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium aspernatur modi commodi maiores iure ut consequatur minima labore repudiandae consectetur hic adipisci quo expedita eaque nam atque officiis, vitae sit!</p>
+        </div>
+        <img class="event__image" src="./images/frontend.png" alt="">
+    </div>
+</section>
+<section class="event event--backend event--image-left">
+    <div class="container" data-aos="fade-left">
+        <div class="event__details">
+            <h2 class="event__details__title">Backend</h2>
+            <p class="event__details__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium aspernatur modi commodi maiores iure ut consequatur minima labore repudiandae consectetur hic adipisci quo expedita eaque nam atque officiis, vitae sit!</p>
+        </div>
+        <img class="event__image" src="./images/frontend.png" alt="">
+    </div>
+</section>
 
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="./scripts/main.js"></script>
 </body>
 </html>
