--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
             <h2 class="event__details__title">Ui/Ux</h2>
             <p class="event__details__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium aspernatur modi commodi maiores iure ut consequatur minima labore repudiandae consectetur hic adipisci quo expedita eaque nam atque officiis, vitae sit!</p>
         </div>
-        <img class="event__image" src="./images/frontend.png" alt="">
+        <img class="event__image" src="./images/ui-ux.png" alt="">
     </div>
 </section>
 <section class="event event--data-science">
@@ -61,7 +61,7 @@
             <h2 class="event__details__title">Data science</h2>
             <p class="event__details__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium aspernatur modi commodi maiores iure ut consequatur minima labore repudiandae consectetur hic adipisci quo expedita eaque nam atque officiis, vitae sit!</p>
         </div>
-        <img class="event__image" src="./images/frontend.png" alt="">
+        <img class="event__image" src="./images/data.png" alt="">
     </div>
 </section>
 <section class="event event--backend event--image-left">
@@ -70,7 +70,7 @@
             <h2 class="event__details__title">Backend</h2>
             <p class="event__details__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium aspernatur modi commodi maiores iure ut consequatur minima labore repudiandae consectetur hic adipisci quo expedita eaque nam atque officiis, vitae sit!</p>
         </div>
-        <img class="event__image" src="./images/frontend.png" alt="">
+        <img class="event__image" src="./images/backend.png" alt="">
     </div>
 </section>
 
